<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.nikhil.group22_hw4.MainActivity">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_trivia_app"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/centerImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/trivia"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/triviaReadyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trivia_ready"
        android:layout_below="@+id/centerImage"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/loadingTriviaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_trivia"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/progressBar"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:visibility="visible"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"/>

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="49dp"
        android:layout_marginStart="49dp"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_trivia"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="58dp"
        android:layout_marginEnd="58dp"
        android:clickable="false"/>
</RelativeLayout>
