<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.nikhil.group22_hw4.StatsActivity">

    <TextView
        android:id="@+id/correctAnswersTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correct_answers"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <ListView
        android:id="@+id/answersListView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="5dp">
    </ListView>

    <TextView
        android:id="@+id/performanceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_performance"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBarStatsActivity"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="15"
            android:progress="10"
            android:layout_toLeftOf="@+id/percentageTextView"
            android:layout_toStartOf="@+id/percentageTextView"/>

        <TextView
            android:id="@+id/percentageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <Button
        android:id="@+id/finishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_gravity="center_horizontal|bottom"/>

</LinearLayout>
