<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trivia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nikhil.group22_hw4.TriviaActivity">

    <TextView
        android:id="@+id/questionNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/background"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@drawable/background"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"/>

    <ImageView
        android:id="@+id/questionImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/timerTextView"
        android:layout_margin="5dp"/>

    <ProgressBar
        android:id="@+id/progressBarTriviaActivity"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/noImageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_below="@+id/progressBarTriviaActivity"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:text="@string/no_image"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/loadingImageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/progressBarTriviaActivity"
        android:layout_margin="5dp"
        android:text="@string/loading_image"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionImageView"
        android:layout_margin="5dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionTextView"
        android:layout_above="@+id/nextButton"
        android:layout_margin="5dp">
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
        </RadioGroup>

    </ScrollView>


    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/next"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/progressBarTriviaActivity"
        android:layout_alignStart="@+id/progressBarTriviaActivity"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp" />

    <Button
        android:id="@+id/previousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/previous"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/progressBarTriviaActivity"
        android:layout_toStartOf="@+id/progressBarTriviaActivity" />

</RelativeLayout>
